# r_mailing_ms_boilerplate

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  dev.dockerfile  docker-compose.yml  prod.dockerfile
.github/workflows/: release.yml  rust.yml
migrations/: 20231110151334_log-table.sql
services/logs/: Cargo.toml
services/logs/src/: db.rs  lib.rs
services/logs/tests/: query.rs
services/mailer/: Cargo.toml
services/mailer/src/: config.rs  lib.rs
services/mailer/templates/: helloworld.hbs
services/mailer/templates/layouts/: base.hbs
services/mailer/tests/: config.rs  handlebars.rs  mailer.rs  mod.rs
services/mailer/tests/templates/partials/: styles.hbs
src/: main.rs
src/api/: mailer.rs  mailer_logs.rs  mod.rs
src/config/: cors.rs
src/controllers/: mailer.rs  mailer_logs.rs  mod.rs
src/middleware/: mod.rs
src/router/: mod.rs
src/services/: mod.rs
src/services/logs/: db.rs  mod.rs
src/services/mailer/: config.rs  mod.rs
templates/: helloworld.hbs
tests/: config.rs  handlebars.rs  mailer.rs  mod.rs  query.rs
