[package]
name = "rust_mailer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "./services/mailer/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenvy = "0.15.7"
env_logger = "0.10.0"
mailer = {path = "services/mailer"}
serde = { version = "1.0.186", features = ["derive"] }
tokio = "1.32.0"
