[package]
name = "rust_mailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenvy = "0.15.7"
env_logger = "0.10.0"
serde = { version = "1.0.186", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
handlebars = "4.3.7"
lettre = { version = "0.11.1", features = ["tokio1", "tokio1-native-tls"] }
serde_json = "1.0.105"
chrono = "0.4.31"