[package]
name = "logs"
version = "0.1.0"
edition = "2021"

[lib]
name = "logs"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
serde = { version = "1.0.186", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
