[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

[lib]
name = "mailer"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.7"
logs = { path = "../logs" }
lettre = { version = "0.11.1", features = ["tokio1", "tokio1-native-tls"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
chrono = "0.4.31"
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }